[project]
name = "eleclove"
version = "0.1.0"

requires-python = "~=3.10.11"
dependencies = [
    "numpy~=1.26",
]

[project.optional-dependencies]
visualize = [
    "gradio~=4.27",
    "matplotlib~=3.8",
]

[tool.pdm.dev-dependencies]
dev = [
    "autoflake~=2.2",
    "gprof2dot~=2022.7",
    "ipykernel~=6.29",
    "isort~=5.13",
    "pytest~=8.1",
    "yapf~=0.40",
]

[tool.pdm.scripts]
export = {composite = ["pdm install", "tools/pdm_export.py"]}
format = "tools/format.py"
profile = "tools/profile.py"

[tool.pdm.build]
package-dir = "."

[tool.yapf]
based_on_style = "yapf"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
column_limit = 160
join_multiple_lines = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
